Copyright (c) 2002-2009 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.1.5 (unreleased)

    Bug fixes

  Silva 2.1.4 (2009-05-08)

    New features

      - Exceptions raised during the upgrade process
        will now include the object causing the error
        in the traceback.

      - sec_get_all_roles, in addition to looking up the roles
        the authenticated user has in this context, can also
        get the roles of an arbitrary user (by passing in the
        userid).

      - Set two differents on Asset to prevent them to maintain a
        different cache for each user. That will force each user to
        authenticate if needed to access to the resource.

    Bug fixes

      - The tocrendering adapter now shows all silva publishable
        types by default.

      - Fixing SilvaFind in documentation.

      - Fix annoying popup when using kupu and safari.

      - Fix some error when invalidating the SMI sidebar cache.


  Silva 2.1.4b2 (2009-04-23)

    Bug fixes

      - Remove absolute urls in SMI CSS. This CSS is included using
        import, so asolute path are not required. This might break as
        well with strange Apache rewrite rules.

      - Cleanup edge case in kupu transforms (SilvaDocument) where nested
        lists can cause bare <br> tags to be stored in the silvaxml; this
        raises errors when rendering with the widgets-based renderer

  Silva 2.1.3 (2009-03-26)

    Bug fixes

      - Fix element order in TOC rendering when the silva order is
        checked.

      - Silva Links are displayed by default TOC kupu objects (like
        they used to be).

      - CTRL+SHIFT+ENTER in kupu while the cursor is in a table will
        create a new empty paragraph below the table.  This feature
        is to improve editing ability when a table is adjacent to an
        external source or another table

      - improve keyboard navigability in kupu around external sources: